Fix flash messages hidden behind navbar on splash page
The splash page sets body padding-top to 0 for the full-screen hero,
which caused flash messages to render behind the fixed navbar. Position

--- a/app/assets/stylesheets/moraga.scss
+++ b/app/assets/stylesheets/moraga.scss
@@ -12,6 +12,11 @@ body {
   padding-top: 60px;
 }
 
+#messages {
+  position: relative;
+  z-index: 10;
+}
+
 #content {
   padding-bottom: 60px;
 }
